--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -4,6 +4,7 @@ body{
 }
 body{
 	padding: 0px;
+	background-color: #F5F5F5;
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
 
@@ -21,8 +22,9 @@ body{
 .wrapper{
 	width: 500px;
 	height: 500px;
-	border: 1px solid #EEE;
-	box-shadow: 0px 0px 2px rgba(0, 0, 0, .1);
+	background-color: #FFF;
+	border: 1px solid #E5E5E5;
+	box-shadow: 0px 0px 5px rgba(0, 0, 0, .15);
 	border-radius: 5px;
 }
 
