--- a/public/client/style.css
+++ b/public/client/style.css
@@ -4,7 +4,7 @@ body{
 }
 body{
 	padding: 0px;
-	background-color: #EEE;
+	background-color: #F5F5F5;
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
 
@@ -24,7 +24,7 @@ body{
 	height: 500px;
 	background-color: #FFF;
 	border: 1px solid #E5E5E5;
-	box-shadow: 0 2px 1px -1px rgba(0,0,0,.2), 0 1px 1px 0 rgba(0,0,0,.14), 0 1px 3px 0 rgba(0,0,0,.12);
+	box-shadow: 0px 0px 5px rgba(0, 0, 0, .15);
 	border-radius: 5px;
 }
 
