--- a/public/client/style.css
+++ b/public/client/style.css
@@ -6,6 +6,7 @@ body{
 	padding: 0px;
 	background-color: #F5F5F5;
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+	overflow: hidden;
 }
 
 .center{
@@ -23,8 +24,7 @@ body{
 	width: 500px;
 	height: 500px;
 	background-color: #FFF;
-	border: 1px solid #E5E5E5;
-	box-shadow: 0px 0px 5px rgba(0, 0, 0, .15);
+	box-shadow: 0 2px 1px -1px rgba(0,0,0,.2), 0 1px 1px 0 rgba(0,0,0,.14), 0 1px 3px 0 rgba(0,0,0,.12);
 	border-radius: 5px;
 }
 
