--- a/public/client/style.css
+++ b/public/client/style.css
@@ -21,11 +21,12 @@ body{
 	width: 100%;
 }
 .wrapper{
-	width: 500px;
-	height: 500px;
+	width: 400px;
+	height: 440px;
 	background-color: #FFF;
 	box-shadow: 0 2px 1px -1px rgba(0,0,0,.2), 0 1px 1px 0 rgba(0,0,0,.14), 0 1px 3px 0 rgba(0,0,0,.12);
 	border-radius: 5px;
+	padding: 24px;
 }
 
 .icon-wrapper{
